[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name='whyis-milvus'
version='0.1.1'
dependencies=[
  'whyis',
  'pymilvus',
  'sentence-transformers',
  'scipy',
  'numpy'
]
[tool.setuptools]
packages=['whyis_milvus','whyis_milvus.entity_linker']

[project.entry-points.whyis]
whyis_milvus = "whyis_milvus:MilvusPlugin"
whyis_milvus_entity_linker = "whyis_milvus.entity_linker:MilvusEntityResolverPlugin"
